--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,15 @@ aside {
 .aside-banner img {
     width: 90%;
 }
+
+header{
+    background-color: royalblue;
+}
+
+footer{
+    background-color: yellow;
+}
+
+#Didyouknow{
+    font-style: italic;
+}
